@@ -35,25 +35,27 @@
  * segment can be described using a {@link java.lang.foreign.MemoryLayout memory layout}, which provides
  * basic operations to query sizes, offsets and alignment constraints. Memory layouts also provide
  * an alternate, more abstract way, to <a href=MemorySegment.html#segment-deref>access memory segments</a>
- * using {@linkplain java.lang.foreign.MemoryLayout#varHandle(java.lang.foreign.MemoryLayout.PathElement...) access var handles},
+ * using {@linkplain java.lang.foreign.MemoryLayout#varHandle(java.lang.foreign.MemoryLayout.PathElement...) var handles},
  * which can be computed using <a href="MemoryLayout.html#layout-paths"><em>layout paths</em></a>.
  *
  * For example, to allocate an off-heap region of memory big enough to hold 10 values of the primitive type {@code int},
  * and fill it with values ranging from {@code 0} to {@code 9}, we can use the following code:
  *
- * {@snippet lang=java :
- * MemorySegment segment = MemorySegment.allocateNative(10 * 4);
+ * {@snippet lang = java:
+ * MemorySegment segment = MemorySegment.allocateNative(10 * 4, SegmentScope.auto());
  * for (int i = 0 ; i < 10 ; i++) {
  *     segment.setAtIndex(ValueLayout.JAVA_INT, i, i);
  * }
- * }
+ *}
  *
  * This code creates a <em>native</em> memory segment, that is, a memory segment backed by
  * off-heap memory; the size of the segment is 40 bytes, enough to store 10 values of the primitive type {@code int}.
- * The off-heap memory backing the native segment will be released when the segment becomes
- * <a href="../../../java/lang/ref/package.html#reachability">unreachable</a>; this is similar to what happens
- * with direct buffers created via {@link java.nio.ByteBuffer#allocateDirect(int)}. It is also possible to manage
- * the lifecycle of allocated native segments more directly, as shown in a later section.
+ * The segment is associated with an {@linkplain java.lang.foreign.SegmentScope#auto() automatic scope}. This
+ * means that the off-heap region of memory backing the segment is managed, automatically, by the garbage collector.
+ * As such, the off-heap memory backing the native segment will be released at some unspecified
+ * point <em>after</em> the segment becomes <a href="../../../java/lang/ref/package.html#reachability">unreachable</a>.
+ * This is similar to what happens with direct buffers created via {@link java.nio.ByteBuffer#allocateDirect(int)}.
+ * It is also possible to manage the lifecycle of allocated native segments more directly, as shown in a later section.
  * <p>
  * Inside a loop, we then initialize the contents of the memory segment; note how the
  * {@linkplain java.lang.foreign.MemorySegment#setAtIndex(ValueLayout.OfInt, long, int) access method}
@@ -70,21 +72,23 @@
  * and in a timely fashion. For this reason, there might be cases where waiting for the garbage collector to determine that a segment
  * is <a href="../../../java/lang/ref/package.html#reachability">unreachable</a> is not optimal.
  * Clients that operate under these assumptions might want to programmatically release the memory backing a memory segment.
- * This can be done, using the {@link java.lang.foreign.MemorySession} abstraction, as shown below:
+ * This can be done, using the {@link java.lang.foreign.Arena} abstraction, as shown below:
  *
- * {@snippet lang=java :
- * try (MemorySession session = MemorySession.openConfined()) {
- *     MemorySegment segment = session.allocate(10 * 4);
+ * {@snippet lang = java:
+ * try (Arena arena = Arena.openConfined()) {
+ *     MemorySegment segment = arena.allocate(10 * 4);
  *     for (int i = 0 ; i < 10 ; i++) {
  *         segment.setAtIndex(ValueLayout.JAVA_INT, i, i);
  *     }
  * }
- * }
+ *}
  *
- * This example is almost identical to the prior one; this time we first create a so called <em>memory session</em>,
- * which is used to <em>bind</em> the life-cycle of the segment created immediately afterwards. Note the use of the
- * <em>try-with-resources</em> construct: this idiom ensures that all the memory resources associated with the segment will be released
- * at the end of the block, according to the semantics described in Section {@jls 14.20.3} of <cite>The Java Language Specification</cite>.
+ * This example is almost identical to the prior one; this time we first create an arena
+ * which is used to allocate multiple native segments which share the same life-cycle. That is, all the segments
+ * allocated by the arena will be associated with the same {@linkplain java.lang.foreign.SegmentScope scope}.
+ * Note the use of the <em>try-with-resources</em> construct: this idiom ensures that the off-heap region of memory backing the
+ * native segment will be released at the end of the block, according to the semantics described in Section {@jls 14.20.3}
+ * of <cite>The Java Language Specification</cite>.
  *
  * <h3 id="safety">Safety</h3>
  *
@@ -94,10 +98,10 @@
  * in other words, access to memory segments is bounds-checked, in the same way as array access is, as described in
  * Section {@jls 15.10.4} of <cite>The Java Language Specification</cite>.
  * <p>
- * Since memory segments can be closed (see above), segments are also validated (upon access) to make sure that
- * the memory session associated with the segment being accessed has not been closed prematurely.
+ * Since memory segments created with an arena can become invalid (see above), segments are also validated (upon access) to make sure that
+ * the scope associated with the segment being accessed is still alive.
  * We call this guarantee <em>temporal safety</em>. Together, spatial and temporal safety ensure that each memory access
- * operation either succeeds - and accesses a valid location of the region of memory backing the memory segment - or fails.
+ * operation either succeeds - and accesses a valid location within the region of memory backing the memory segment - or fails.
  *
  * <h2 id="ffa">Foreign function access</h2>
  * The key abstractions introduced to support foreign function access are {@link java.lang.foreign.SymbolLookup},
@@ -118,9 +122,8 @@
  *     FunctionDescriptor.of(ValueLayout.JAVA_LONG, ValueLayout.ADDRESS)
  * );
  *
- * try (MemorySession session = MemorySession.openConfined()) {
- *     MemorySegment cString = session.allocate(5 + 1);
- *     cString.setUtf8String(0, "Hello");
+ * try (Arena arena = Arena.openConfined()) {
+ *     MemorySegment cString = arena.allocateUtf8String("Hello");
  *     long len = (long)strlen.invoke(cString); // 5
  * }
  *}
@@ -134,10 +137,10 @@
  * From this information, the linker will uniquely determine the sequence of steps which will turn
  * the method handle invocation (here performed using {@link java.lang.invoke.MethodHandle#invoke(java.lang.Object...)})
  * into a foreign function call, according to the rules specified by the ABI of the underlying platform.
- * The {@link java.lang.foreign.MemorySegment} class also provides many useful methods for
- * interacting with foreign code, such as converting Java strings
- * {@linkplain java.lang.foreign.MemorySegment#setUtf8String(long, java.lang.String) into} zero-terminated, UTF-8 strings and
- * {@linkplain java.lang.foreign.MemorySegment#getUtf8String(long) back}, as demonstrated in the above example.
+ * The {@link java.lang.foreign.Arena} class also provides many useful methods for
+ * interacting with foreign code, such as
+ * {@linkplain java.lang.foreign.SegmentAllocator#allocateUtf8String(java.lang.String) converting} Java strings into
+ * zero-terminated, UTF-8 strings, as demonstrated in the above example.
  *
  * <h3 id="upcalls">Upcalls</h3>
  * The {@link java.lang.foreign.Linker} interface also allows clients to turn an existing method handle (which might point
@@ -164,7 +167,7 @@
  *                                                                 ValueLayout.ADDRESS.asUnbounded());
  * MethodHandle intCompareHandle = MethodHandles.lookup().findStatic(IntComparator.class,
  *                                                 "intCompare",
- *                                                 Linker.upcallType(comparFunction));
+ *                                                 intCompareDescriptor.toMethodType());
  *}
  *
  * As before, we need to create a {@link java.lang.foreign.FunctionDescriptor} instance, this time describing the signature
@@ -176,41 +179,53 @@
  * using the {@link java.lang.foreign.Linker} interface, as follows:
  *
  * {@snippet lang = java:
- * MemorySession session = ...
+ * SegmentScope scope = ...
  * MemorySegment comparFunc = Linker.nativeLinker().upcallStub(
- *     intCompareHandle, intCompareDescriptor, session);
+ *     intCompareHandle, intCompareDescriptor, scope);
  * );
  *}
  *
  * The {@link java.lang.foreign.FunctionDescriptor} instance created in the previous step is then used to
- * {@linkplain java.lang.foreign.Linker#upcallStub(java.lang.invoke.MethodHandle, FunctionDescriptor, MemorySession) create}
+ * {@linkplain java.lang.foreign.Linker#upcallStub(java.lang.invoke.MethodHandle, FunctionDescriptor, SegmentScope) create}
  * a new upcall stub; the layouts in the function descriptors allow the linker to determine the sequence of steps which
  * allow foreign code to call the stub for {@code intCompareHandle} according to the rules specified by the ABI of the
  * underlying platform.
- * The lifecycle of the upcall stub is tied to the {@linkplain java.lang.foreign.MemorySession memory session}
- * provided when the upcall stub is created. This same session is made available by the {@link java.lang.foreign.MemorySegment}
+ * The lifecycle of the upcall stub is tied to the {@linkplain java.lang.foreign.SegmentScope scope}
+ * provided when the upcall stub is created. This same scope is made available by the {@link java.lang.foreign.MemorySegment}
  * instance returned by that method.
  *
  * <h2 id="restricted">Restricted methods</h2>
  * Some methods in this package are considered <em>restricted</em>. Restricted methods are typically used to bind native
  * foreign data and/or functions to first-class Java API elements which can then be used directly by clients. For instance
- * the restricted method {@link java.lang.foreign.MemorySegment#ofAddress(long, long, MemorySession)}
+ * the restricted method {@link java.lang.foreign.MemorySegment#ofAddress(long, long, SegmentScope)}
  * can be used to create a fresh segment with the given spatial bounds out of a native address.
  * <p>
- * Binding foreign data and/or functions is generally unsafe and, if done incorrectly, can result in VM crashes, or memory corruption when the bound Java API element is accessed.
- * For instance, in the case of {@link java.lang.foreign.MemorySegment#ofAddress(long, long, MemorySession)},
- * if the provided spatial bounds are incorrect, a client of the segment returned by that method might crash the VM, or corrupt
+ * Binding foreign data and/or functions is generally unsafe and, if done incorrectly, can result in VM crashes,
+ * or memory corruption when the bound Java API element is accessed. For instance, in the case of
+ * {@link java.lang.foreign.MemorySegment#ofAddress(long, long, SegmentScope)}, if the provided spatial bounds are
+ * incorrect, a client of the segment returned by that method might crash the VM, or corrupt
  * memory when attempting to access said segment. For these reasons, it is crucial for code that calls a restricted method
  * to never pass arguments that might cause incorrect binding of foreign data and/or functions to a Java API.
  * <p>
- * Access to restricted methods can be controlled using the command line option {@code --enable-native-access=M1,M2, ... Mn},
- * where {@code M1}, {@code M2}, {@code ... Mn} are module names (for the unnamed module, the special value {@code ALL-UNNAMED}
- * can be used). If this option is specified, access to restricted methods is only granted to the modules listed by that
- * option. If this option is not specified, access to restricted methods is enabled for all modules, but
- * access to restricted methods will result in runtime warnings.
+ * Given the potential danger of restricted methods, the Java runtime issues a warning on the standard error stream
+ * every time a restricted method is invoked. Such warnings can be disabled by granting access to restricted methods
+ * to selected modules. This can be done either via implementation-specific command line options, or programmatically, e.g. by calling
+ * {@link java.lang.ModuleLayer.Controller#enableNativeAccess(java.lang.Module)}.
  * <p>
  * For every class in this package, unless specified otherwise, any method arguments of reference
  * type must not be null, and any null argument will elicit a {@code NullPointerException}.  This fact is not individually
  * documented for methods of this API.
+ *
+ * @apiNote Usual memory model guarantees, for example stated in {@jls 6.6} and {@jls 10.4}, do not apply
+ * when accessing native memory segments as these segments are backed by off-heap regions of memory.
+ *
+ * @implNote
+ * In the reference implementation, access to restricted methods can be granted to specific modules using the command line option
+ * {@code --enable-native-access=M1,M2, ... Mn}, where {@code M1}, {@code M2}, {@code ... Mn} are module names
+ * (for the unnamed module, the special value {@code ALL-UNNAMED} can be used). If this option is specified, access to
+ * restricted methods is only granted to the modules listed by that option. If this option is not specified,
+ * access to restricted methods is enabled for all modules, but access to restricted methods will result in runtime warnings.
+ *
  */
 package java.lang.foreign;
+
