@@ -29,10 +29,11 @@
  * @run testng/othervm --enable-native-access=ALL-UNNAMED TestNative
  */
 
-import java.lang.foreign.MemorySession;
+import java.lang.foreign.Arena;
 import java.lang.foreign.MemorySegment;
 import java.lang.foreign.MemoryLayout;
 import java.lang.foreign.MemoryLayout.PathElement;
+import java.lang.foreign.SegmentScope;
 import java.lang.foreign.SequenceLayout;
 import java.lang.foreign.ValueLayout;
 import org.testng.annotations.DataProvider;
@@ -144,8 +145,8 @@ public class TestNative extends NativeTestHelper {
 
     @Test(dataProvider="nativeAccessOps")
     public void testNativeAccess(Consumer<MemorySegment> checker, Consumer<MemorySegment> initializer, SequenceLayout seq) {
-        try (MemorySession session = MemorySession.openConfined()) {
-            MemorySegment segment = session.allocate(seq);
+        try (Arena arena = Arena.openConfined()) {
+            MemorySegment segment = MemorySegment.allocateNative(seq, arena.scope());;
             initializer.accept(segment);
             checker.accept(segment);
         }
@@ -154,8 +155,8 @@ public class TestNative extends NativeTestHelper {
     @Test(dataProvider="buffers")
     public void testNativeCapacity(Function<ByteBuffer, Buffer> bufferFunction, int elemSize) {
         int capacity = (int)doubles.byteSize();
-        try (MemorySession session = MemorySession.openConfined()) {
-            MemorySegment segment = session.allocate(doubles);
+        try (Arena arena = Arena.openConfined()) {
+            MemorySegment segment = MemorySegment.allocateNative(doubles, arena.scope());;
             ByteBuffer bb = segment.asByteBuffer();
             Buffer buf = bufferFunction.apply(bb);
             int expected = capacity / elemSize;
@@ -167,9 +168,9 @@ public class TestNative extends NativeTestHelper {
     @Test
     public void testDefaultAccessModes() {
         MemorySegment addr = allocateMemory(12);
-        try (MemorySession session = MemorySession.openConfined()) {
-            session.addCloseAction(() -> freeMemory(addr));
-            MemorySegment mallocSegment = MemorySegment.ofAddress(addr.address(), 12, session);
+        try (Arena arena = Arena.openConfined()) {
+            MemorySegment mallocSegment = MemorySegment.ofAddress(addr.address(), 12,
+                    arena.scope(), () -> freeMemory(addr));
             assertFalse(mallocSegment.isReadOnly());
         }
     }
@@ -178,13 +179,13 @@ public class TestNative extends NativeTestHelper {
     public void testMallocSegment() {
         MemorySegment addr = allocateMemory(12);
         MemorySegment mallocSegment = null;
-        try (MemorySession session = MemorySession.openConfined()) {
-            session.addCloseAction(() -> freeMemory(addr));
-            mallocSegment = MemorySegment.ofAddress(addr.address(), 12, session);
+        try (Arena arena = Arena.openConfined()) {
+            mallocSegment = MemorySegment.ofAddress(addr.address(), 12,
+                    arena.scope(), () -> freeMemory(addr));
             assertEquals(mallocSegment.byteSize(), 12);
             //free here
         }
-        assertTrue(!mallocSegment.session().isAlive());
+        assertTrue(!mallocSegment.scope().isAlive());
     }
 
     @Test
@@ -197,9 +198,9 @@ public class TestNative extends NativeTestHelper {
 
     @Test(expectedExceptions = IllegalArgumentException.class)
     public void testBadResize() {
-        try (MemorySession session = MemorySession.openConfined()) {
-            MemorySegment segment = session.allocate(4, 1);
-            MemorySegment.ofAddress(segment.address(), -1, MemorySession.global());
+        try (Arena arena = Arena.openConfined()) {
+            MemorySegment segment = MemorySegment.allocateNative(4, 1, arena.scope());;
+            MemorySegment.ofAddress(segment.address(), -1, SegmentScope.global());
         }
     }
 
